# rfs-framework

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .rfs-rules  404.html  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CLI_GUIDE.md  CONTEXT7_DEPLOYMENT_SUMMARY_V4.6.1.md  CONTEXT7_DEPLOYMENT_SUMMARY_V4.6.6.md  CONTEXT7_UPDATE_NOTES.md  CONTEXT7_UPDATE_NOTES_V4.6.1.md  CONTEXT7_VERIFICATION_TESTS.md  DEPLOYMENT_COMPLETE_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.prod  INSTALLATION.md  MIGRATION_GUIDE.md  MYPY_IMPROVEMENT_PLAN.md  MYPY_PROGRESS_REPORT.md  PUBLISHING.md  PYPI_DEPLOY_INSTRUCTIONS.md  PYPI_REMOVAL_INSTRUCTIONS.md  PYPI_SETUP.md  README-MCP.md  README.md  RELEASE_NOTES_v4.5.0.md  RFS_V4_ENHANCEMENT_IMPLEMENTATION_PLAN.md  RFS_V4_FRAMEWORK_ANALYSIS_REPORT.md  TEST_PLAN.md  TODO.md  conftest.py  context7.json  context7_v4.6.1_backup.json  debug_flux_zip.py  debug_methods.py  (+33 more)
.serena/: project.yml
01-core-patterns/: index.html
02-dependency-injection/: index.html
03-configuration/: index.html
04-transactions/: index.html
05-deployment/: index.html
06-rollback/: index.html
07-logging/: index.html
08-monitoring/: index.html
09-validation/: index.html
10-access-control/: index.html
11-security/: index.html
12-circuit-breaker/: index.html
13-load-balancing/: index.html
14-cli-interface/: index.html
15-code-quality/: index.html
15-configuration-injection/: index.html
16-event-system/: index.html
16-hof-usage-guide/: index.html
16-hot-library/: index.html
17-functional-development-rules/: index.html
17-profiles/: index.html
17-state-machine/: index.html
18-database/: index.html
19-readable-hof-guide/: index.html
20-code-quality/: index.html
20-monoresult-guide/: index.html
21-event-system/: index.html
21-fastapi-integration/: index.html
22-hot-library/: index.html
22-monitoring-observability/: index.html
23-profiles/: index.html
23-testing-guide/: index.html
24-state-machine/: index.html
25-async-pipeline/: index.html
26-asyncresult-web-integration/: index.html
27-reactive-programming-guide/: index.html
99-implementation-status/: index.html
API_REFERENCE/: index.html
CONTRIBUTING/: index.html
ENTERPRISE_SERVER_ARCHITECTURE/: index.html
LICENSE/: index.html
MIGRATION_GUIDE/: index.html
RELEASE_NOTES/: index.html
ROADMAP/: index.html
TODO/: index.html
USER_GUIDE/: index.html
api/: index.html
changelog/: index.html
config/: llm_config.yaml
docs/: 01-core-patterns.md  02-dependency-injection.md  03-configuration.md  04-transactions.md  05-deployment.md  07-logging.md  08-monitoring.md  10-access-control.md  11-security.md  12-circuit-breaker.md  13-load-balancing.md  14-cli-interface.md  15-code-quality.md  15-configuration-injection.md  16-event-system.md  16-hof-usage-guide.md  16-hot-library.md  17-functional-development-rules.md  17-state-machine.md  18-database.md  18-llm-configuration-guide.md  19-readable-hof-guide.md  20-code-quality.md  20-monoresult-guide.md  21-event-system.md  21-fastapi-integration.md  22-hot-library.md  22-monitoring-observability.md  23-profiles.md  23-testing-guide.md  24-state-machine.md  25-async-pipeline.md  26-asyncresult-web-integration.md  27-reactive-programming-guide.md  28-llm-integration-guide.md  99-implementation-status.md  API_EN.md  API_REFERENCE.md  CONTEXT7_REGISTRATION.md  CONTRIBUTING.md  (+13 more)
examples/: security_hardening_example.py
getting-started/: index.html
installation/: index.html
javascripts/: mathjax.js
pr/: IMPROVEMENT-001-import-standardization.md  IMPROVEMENT-002-type-hints.md  ISSUE-001-field-import-error.md  RFS-ResultAsync-Chaining-Bug-Analysis.md  (+13 more)
scripts/quality/: apply_rule_batches.py  code_quality.py  create_rule_based_batches.py  functional_linting_rules.json  pyproject.toml  rfs-quality  rfs_adoption_check.py  rfs_apply_batch.py  rfs_baseline.json
(+376 files in other folders)
